fix alignment

--- a/src/style/partials/_page-title.scss
+++ b/src/style/partials/_page-title.scss
@@ -8,6 +8,7 @@
     top: 0;
     background: color('white');
     z-index: 100;
+    min-height: 3.5rem;
 
     @include media-breakpoint-down(sm) {
         top: $top-bar-height;
